public/css/styles.css
/* ... */
@media (max-width: 800px) {

    .form,
    .flexbox-form-container {
        max-width: 500px;
    }

    .container {
        padding: 10px 12%;
    }
}

@media (max-width: 500px) {

    .form,
    .flexbox-form-container,
    p {
        max-width: 360px;
        margin-left: auto;
        margin-right: auto;
    }

    .psw {
        display: flex;
        padding-top: 3%;
        padding-bottom: 5%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .container {
        padding: 10px 10%;
    }

    .thankyou-buttons {
        flex-direction: column;
        max-width: 80vh;
        padding: 2% 6% 2% 6%;
    }

    .ty-button {
        font-size: 18px;
        min-height: 60px;
        margin: 3%;
        padding: 2% 0% 2% 0%;
        min-width: 250px;
    }

    .thankyouimg {
        width: 70%;
    }
}


/* ------------------------------------------------------------------------------------------------------------------------------- */
/* ||               MOBILE VIEW             */
/* When the size of the browser window is small, the following CSS rules will apply */
@media (max-width: 1000px) {

    .engagementCard {
        grid-template-columns: 40% auto;
        align-items: center;
    }

    .rankingBox {
        color: white;
        font-size: 18px;
        font-weight: bold;
        margin: 10px 20px 10px 0px;
        text-align: center;
    }

    .ranking {
        color: white;
        font-size: 15px;
        font-weight: 600;
        text-align: left;
    }

    .patient-dashboard-notifications-text2 {
        text-align: center;
    }

    .badge {
        margin: 10px 20px 10px 20px;
    }

    /* Show burger icon */
    .flexbox-navbar-hamburger {
        display: block;
    }

    /* Hide navbar text */
    .flexbox-navbar-text {
        display: none;
    }

    /* Hide username, user status and message icon */
    .flexbox-navbar-profile {
        display: none;
    }

    .nav-msg-icon {
        display: none;
    }

    .nav-profile-verticle-bar {
        display: none;
    }


    /* Activate the sidebar. Sidebar is only accessible when the user has clicked the burger icon */
    .sidebar.active {
        height: 100%;
        width: 38%;
        display: block;
        position: fixed;
        /* Ensure that the sidebar position is fixed in place */
        z-index: 1;
        /* Bring the sidebar on top of the current page */
        background-color: #72A6E8;
        transition: 0.2s;
        /* Animation speed */
    }

    /* Positioning for the sidebar content */
    .sidebar-content {
        position: relative;
        top: 6%;
        width: 100%;
        text-align: left;
        margin-left: 10px;
        margin-top: 40px;
    }

    /* Make the button slightly smaller on small screens */
    .flexbox-navbar-button {
        /* font-size: 20px; */
        padding: 12px 20px;
    }

    #patient-dashboard-grid-container {
        grid-template-columns: 1fr;
        justify-items: center;
        align-content: center;
        margin-left: auto;
        margin-right: auto;
    }

    #patient-dashboard-grid-container-nested {
        grid-template-columns: 1fr;
        width: 324px;
    }

    .heading {
        text-align: center;
    }

    .button01 {
        margin-bottom: 2%;
        /* min-width: 300px;   */
    }

    .patient-dashboard-notifications-text {
        text-align: center;
        grid-column-start: 1;
        grid-row-start: 1;
    }

    .dataToRecord {
        grid-column-start: 1;

    }

    .button02 {
        grid-column-start: 1;
        grid-row-start: 5;
        grid-row-end: 7;
        padding: 5%;
        min-height: 124px;
    }

    #profile {
        text-align: center;
        margin: auto;
    }

    .history-title {
        font-size: 70%;
    }

    .timestamp-history {
        width: 30%;
    }

    .measurement-history {
        width: 20%;
    }

    .date-history {
        width: 25%;
        justify-content: center;
    }

    .time-history {
        width: 20%;
        justify-content: center;
    }

    .history-data {
        font-size: 70%;
    }

    .history-pic {
        height: 30px;
        width: 30px;
        display: flex;
    }

    .history-row:hover .history-pic {
        height: 30px;
        width: 30px;
    }

    .innerbound {
        flex-direction: column;
    }

    .placeholderimg {
        align-self: center;
    }
}

/*----------------------------------------------------------------------------------------------------------------------*/
/*Leaderboard CSS -- work in progress, need to make responsive*/

/* headings */
.LB-heading {
    text-align: center;
    color: #72a6e8;
    font-family: 'poppins', sans-serif;
    font-weight: bolder;
    font-size: 35px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.top-title {
    color: #717273;
    font-size: 22px;
    font-family: 'poppins', sans-serif;
    font-weight: bold;
    margin-top: 40px;
    text-align: center;
}

/* overall container */
.leaderboard-container {
    justify-content: center;
    align-content: center;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    padding-bottom: 7%;
    padding-top: 20px;
}

/* top 3 visuals at the top */
.leaderboard-image-flex {
    display: flex;
    background-color: #EAF3FF;
    border-radius: 20px;
    justify-content: center;
    align-content: center;
    margin-left: auto;
    margin-right: auto;
    padding-right: auto;
    padding-bottom: 20px;
    padding-top: 20px;
    align-items: baseline;
    min-height: 170px;
}

.place {
    padding-left: 9%;
    padding-right: 9%;
    justify-items: center;
    align-items: center;
}

.user-labels {
    text-align: center;
    font-family: 'poppins', sans-serif;
    color: #717273;
    font-size: 15px;
}

/* end of top 3 section */
/* top 5 leaderboard list */

/* top 3 */
.board-icon {
    height: 36px;
    width: 36px;
    align-self: center;
}
/* ... */

